[package]
name = "quadtree_rs"
version = "0.1.3"
authors = ["James Adam Buckland <james.adam.buckland@gmail.com>"]
edition = "2018"
description = "Point/region Quadtree with support for overlapping regions."

readme = "README.md"

# SPDX 2.1 license expression. See https://spdx.org/licenses/
license = "Apache-2.0"

[dependencies]
num = "0.2"
derive_builder = "0.7"
serde = { version = "1.0.218", features = ["derive"]}

[features]
verbose = []